Restore frontpage design
Restore the frontpage, so we have something to work with, and
pro signup/sign-in gets exposed.

--- a/etherpad/src/templates/main/home.ejs
+++ b/etherpad/src/templates/main/home.ejs
@@ -10,25 +10,43 @@ Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS-IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
-limitations under the License. */ %><% helpers.setHtmlTitle("EtherPad: Open-Sourced!"); %>
+limitations under the License. */ %><% helpers.setHtmlTitle("TitanPad"); helpers.addBodyClass("home"); %>
 
-<% helpers.includeCss("home-opensource.css"); %>
+<% helpers.includeCss("home.css"); %>
 
-<div id="home">
-  <div id="title">
-    EtherPad: Open-Sourced!
-  </div>
-
-  <div>
-    <a id="home-newpad" href="/ep/pad/newpad">
-      Create new pad
-    </a>
-    <!--
-    <a id="home-newsite" href="ep/pro-signup/">
-      Create team site
-    </a>
-    -->
-  </div>
+<div id="container">
+<div id="topnav_wrap"> 
+<div id="navigation"> 
+      <h1><a href="/">TitanPad</a></h1> 
+<ul>
+	<li class="topnav_signin"><a href="http://titanpad.com/ep/pro-account/sign-in">Sign In</a></li>
+	<li class="topnav_home selected"><a href="http://titanpad.com/">Home</a></li>
+</ul>
+<div style="clear: both;"><!-- --></div> 
 </div>
+</div>
+<div id="top"> 
+<div id="intro-left"> 
+<h1>TitanPad</h1>
+
+<div id="intro-links"> 
+<a id="newpadbutton" href="/ep/pad/newpad">Create new pad <small>No sign-up, start writing instantly</small></a>
+<a id="betabutton" href="/ep/pad/pro-signup">Create team site <small>Your own private space</small></a>
+</div> 
+
+</div>
+</div>
+
+<div id="bottom">
+<div id="quote"> 
+<div class="clear"></div> 
+</div>
+
+<div id="features"> 
+<div class="clear"></div> 
+</div> 
+                
+<div class="clear"></div> 
+</div> 
 
 
