Fix framedpage layouts and add missing about files
Texts are placeholders, obviously.

--- a/etherpad/src/templates/framed/framedfooter.ejs
+++ b/etherpad/src/templates/framed/framedfooter.ejs
@@ -1,13 +1,10 @@
- <div id="framedfooter"> 
- 
-
+<% helpers.clearFloats(); %>
+<div id="framedfooter">
     <div id="footer"> 
       <div id="footer-inner"> 
- 
 	<div id="appjet"> 
           <span>Powered by <a href="http://github.com/titanpad/titanpad">TitanPad</a></span> 
 	</div> 
-	
 	<div id="footer-left"> 
 	  <span>Copyright &copy; ...</span> 
 	  <ul> 
@@ -16,10 +13,7 @@
             <li><a href="/ep/about/privacy">Privacy Policy</a></li> 
 	  </ul> 
 	</div> 
- 
-	<div style="clear: both;"><!-- --></div> 
-	
+	<% helpers.clearFloats(); %>
       </div> 
     </div> 
-
 </div> 
