--- a/etherpad/src/templates/main/home.ejs
+++ b/etherpad/src/templates/main/home.ejs
@@ -14,24 +14,15 @@ limitations under the License. */ %><% helpers.setHtmlTitle("TitanPad"); helpers
 
 <% helpers.includeCss("home.css"); %>
 
-<div id="container">
-<div id="topnav_wrap"> 
-<div id="navigation"> 
-      <h1><a href="/">TitanPad</a></h1> 
-<ul>
-	<li class="topnav_signin"><a href="http://titanpad.com/ep/pro-account/sign-in">Sign In</a></li>
-	<li class="topnav_home selected"><a href="http://titanpad.com/">Home</a></li>
-</ul>
-<div style="clear: both;"><!-- --></div> 
-</div>
-</div>
 <div id="top"> 
 <div id="intro-left"> 
 <h1>TitanPad</h1>
 
 <div id="intro-links"> 
 <a id="newpadbutton" href="/ep/pad/newpad">Create new pad <small>No sign-up, start writing instantly</small></a>
-<a id="betabutton" href="/ep/pad/pro-signup">Create team site <small>Your own private space</small></a>
+<!-- pro is broken ATM :(
+<a id="betabutton" href="/ep/pro-signup">Create team site <small>Your own private space</small></a>
+ -->
 </div> 
 
 </div>
@@ -46,7 +37,4 @@ limitations under the License. */ %><% helpers.setHtmlTitle("TitanPad"); helpers
 <div class="clear"></div> 
 </div> 
                 
-<div class="clear"></div> 
-</div> 
-
 
