TitanPad branding part X

--- a/etherpad/src/templates/framed/framedfooter.ejs
+++ b/etherpad/src/templates/framed/framedfooter.ejs
@@ -6,11 +6,10 @@
           <span>Powered by <a href="http://github.com/titanpad/titanpad">TitanPad</a></span> 
 	</div> 
 	<div id="footer-left"> 
-	  <span>Copyright &copy; ...</span> 
+	  <span>Copyright &copy; 2010 TitanPad Authors</span> 
 	  <ul> 
-            <li><a href="/ep/about/contact">Contact</a></li> 
-            <li><a href="/ep/about/tos">Terms of Service</a></li> 
-            <li><a href="/ep/about/privacy">Privacy Policy</a></li> 
+            <li><a href="/ep/about/about">About</a></li> 
+            <li><a href="/ep/about/impressum">Impressum</a></li> 
 	  </ul> 
 	</div> 
 	<% helpers.clearFloats(); %>
