--- a/etherpad/src/templates/main/home.ejs
+++ b/etherpad/src/templates/main/home.ejs
@@ -17,7 +17,8 @@ limitations under the License. */ %><% helpers.setHtmlTitle("TitanPad"); helpers
 <div id="top"> 
 <div id="intro-left"> 
 <h1>TitanPad</h1>
-
+<h2>TitanPad lets people work on one document simultaneously</h2>
+<p>We are rescuing EtherPad for your use.</p>
 <div id="intro-links"> 
 <a id="newpadbutton" href="/ep/pad/newpad">Create new pad <small>No sign-up, start writing instantly</small></a>
 <!-- pro is broken ATM :(
@@ -29,11 +30,45 @@ limitations under the License. */ %><% helpers.setHtmlTitle("TitanPad"); helpers
 </div>
 
 <div id="bottom">
-<div id="quote"> 
+<div id="quote">
+<q>“Everyone loves it!”</q>
+
+<div id="quote-right">
+	<cite>—
+	<strong>Anonymous</strong>, Internet
+	</cite>
+</div>
 <div class="clear"></div> 
 </div>
 
-<div id="features"> 
+<div id="features">
+<ul>
+<li class="first">
+<img src="/static/img/davy/gfx/32/15.png" alt="Clock">
+<strong>True real-time</strong>
+<span>...</span>
+
+</li>
+
+<li>
+<img src="/static/img/davy/gfx/32/65.png" alt="Color Wheel">
+<strong>Everyone gets his own color</strong>
+<span>...</span>
+</li>
+
+<li>
+<img src="/static/img/davy/gfx/32/78.png" alt="Undo">
+<strong>Infinite Undo</strong>
+<span>...</span>
+</li>
+
+<li>
+<img src="/static/img/davy/gfx/32/114.png" alt="Filing">
+<strong>Subdomains coming soon!</strong>
+<span>We're working on the details, expect this to come soon!</span>
+</li>
+
+</ul>
 <div class="clear"></div> 
 </div> 
                 
