--- a/etherpad/src/static/css/home.css
+++ b/etherpad/src/static/css/home.css
@@ -32,7 +32,7 @@
 		position: relative;
 		padding: 57px 0 0 0;
 		overflow: hidden;
-		background: transparent url(/static/img/davy/gfx/home-logo2.gif) no-repeat top left;
+		background: transparent url(/static/img/home/titanpad.png) no-repeat top left;
 		height: 0px;
 		margin: 0 0 5px -8px;
 	}
