--- a/etherpad/src/templates/pad/pad_body2.ejs
+++ b/etherpad/src/templates/pad/pad_body2.ejs
@@ -11,7 +11,7 @@ distributed under the License is distributed on an "AS-IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License. */ %>
-<% helpers.setHtmlTitle("EtherPad: "+pageTitle); %>
+<% helpers.setHtmlTitle("TitanPad: "+pageTitle); %>
 <% helpers.setBodyId("padbody") %>
 <% helpers.addBodyClass(bodyClass) %>
 <% helpers.includeCss("pad2_ejs.css") %>
