--- a/etherpad/src/templates/pro/pro_home.ejs
+++ b/etherpad/src/templates/pro/pro_home.ejs
@@ -60,28 +60,23 @@ limitations under the License. */ %><% helpers.setHtmlTitle(orgName + " - EtherP
 
     <div class="news-time-sep">
       <div class="date">
-        June 17th, 2009
+        April 10th, 2010
       </div>
       <div class="line"><!-- --></div>
     </div>
 
     <div class="news-item">
-      <p>Welcome to your EtherPad Beta Account!  Please report bugs by
-      sending email to <%= helpers.oemail("bugs") %>. You can also give us
-      feedback and feature suggestions via <a target="_blank"
-      href="http://uservoice.etherpad.com/">UserVoice</a>.</p>
+      <p>Welcome to your TitanPad Beta Account!  Please report bugs by
+      sending email to <%= helpers.oemail("support") %>. You can also give us
+      feedback and feature suggestions via the same address.</p>
 
       <p>If you have any questions, just email <%=
       helpers.oemail("support") %> and
       we will respond to your inquiries.</p>
 
-      <p>We hope you enjoy EtherPad!</p>
+      <p>We hope you enjoy TitanPad!</p>
 
-      <p>Sincerely,</p>
-
-      <p>Aaron Iba<br/>
-      CEO, AppJet Inc.
-      </p>
+      <p>TitanPad Team</p>
     </div>
 
   </div>
