let email addresses be configurable

--- a/etherpad/src/templates/about/impressum_body.ejs
+++ b/etherpad/src/templates/about/impressum_body.ejs
@@ -3,7 +3,7 @@
 <div class="fpcontent">
 <h1>Contact</h1>
 <br/>
-TitanPad.com Team can be reached at support@titanpad.com.<br/>
+TitanPad.com Team can be reached at <%= EMAILADDRESSES['support'] %>.<br/>
 <br/>
 <br/>
 <h1>Impressum</h1>
