--- a/etherpad/src/templates/pro/account/account-welcome-email.ejs
+++ b/etherpad/src/templates/pro/account/account-welcome-email.ejs
@@ -22,7 +22,7 @@ Thank you for signing up for EtherPad Professional Edition.  You can sign in by 
 
 <%= signinLink %>
 
-For help signing in, or general support issues, please email support@etherpad.com.
+For help signing in, or general support issues, please email <%= EMAILADDRESSES['support'] %>.
 
 --
 This email was sent to <%= toEmail %> from an EtherPad user.
