--- a/etherpad/src/templates/email/padinvite.ejs
+++ b/etherpad/src/templates/email/padinvite.ejs
@@ -15,4 +15,4 @@ limitations under the License. */ %><%= body %>
 --
 Sent by <%= request.host %> at the request of an EtherPad user.
 Do not reply to this email.
-Report abuse to: support@etherpad.com
+Report abuse to: <%= EMAILADDRESSES['support'] %>
