--- a/etherpad/src/templates/framed/framedheader.ejs
+++ b/etherpad/src/templates/framed/framedheader.ejs
@@ -14,7 +14,7 @@ limitations under the License. */ %>
 
 <% function renderTopNav() {
     var links = [
-//      ['/ep/pro-account/sign-in', 'Sign In', 'signin'],
+      ['/ep/pro-account/sign-in', 'Sign In', 'signin'],
       ['http://blog.titanpad.com/', 'Blog', 'blog'],
       ['/', 'Home', 'home'],
     ];
