remove EEPNET/PNE/PrivateNetworkEdition traces
All PNE support is gone now. This should simplify our life quite a bit.

--- a/etherpad/src/templates/framed/framedheader-pro.ejs
+++ b/etherpad/src/templates/framed/framedheader-pro.ejs
@@ -60,11 +60,9 @@ limitations under the License. */ %><% helpers.addBodyClass("pro-withtopbar"); %
     return ul;
 } %>
 
-  <%= pneTrackerHtml %>
-
 <div id="pro-topnav">
   <div id="pro-topnav-inner">
-    <% if (validLicense && account) { %>
+    <% if (account) { %>
       <%= renderProTopNav() %>
       <%= helpers.clearFloats() %>
     <% } %>
