TitanPad branding stuff

--- a/etherpad/src/templates/about/about_body.ejs
+++ b/etherpad/src/templates/about/about_body.ejs
@@ -3,6 +3,8 @@
 <div class="fpcontent">
 <h1>About / TOS / Privacy Info</h1>
 <br/>
+TitanPad.com Team can be reached at <%= EMAILADDRESSES['support'] %>.<br/>
+<br/>
 
 TitanPad was launched to provide an EtherPad setup which is unrelated to any commercial and political entities. Its goal is to offer a stable service through proper operating.<br/>
 <br/>
