--- a/etherpad/src/templates/main/home.ejs
+++ b/etherpad/src/templates/main/home.ejs
@@ -21,9 +21,9 @@ limitations under the License. */ %><% helpers.setHtmlTitle("TitanPad"); helpers
 <p>We are rescuing EtherPad for your use.</p>
 <div id="intro-links"> 
 <a id="newpadbutton" href="/ep/pad/newpad">Create new pad <small>No sign-up, start writing instantly</small></a>
-<!-- pro is broken ATM :(
+<!--
 <a id="betabutton" href="/ep/pro-signup">Create team site <small>Your own private space</small></a>
- -->
+-->
 </div> 
 
 </div>
@@ -52,7 +52,7 @@ limitations under the License. */ %><% helpers.setHtmlTitle("TitanPad"); helpers
 
 <li>
 <img src="/static/img/davy/gfx/32/65.png" alt="Color Wheel">
-<strong>Everyone gets his own color</strong>
+<strong>Everyone gets their own color</strong>
 <span>...</span>
 </li>
 
@@ -64,8 +64,9 @@ limitations under the License. */ %><% helpers.setHtmlTitle("TitanPad"); helpers
 
 <li>
 <img src="/static/img/davy/gfx/32/114.png" alt="Filing">
-<strong>Subdomains coming soon!</strong>
-<span>We're working on the details, expect this to come soon!</span>
+<strong><a href="/ep/pro-signup/">Get your own private space</a></strong>
+<span>Get a space for your team, on a subdomain<br/>
+Note: requires the <a href="http://www.cacert.org/index.php?id=3">CACert SSL Root</a> to be installed.</span>
 </li>
 
 </ul>
