--- a/etherpad/src/templates/main/pro_signup_body.ejs
+++ b/etherpad/src/templates/main/pro_signup_body.ejs
@@ -37,7 +37,9 @@ limitations under the License. */ %><% helpers.includeCss('pro-signup.css') %>
         </div>
         <div class="inputhelp">
           This is where you and members of your team will sign
-          in.
+          in.<br/>
+	  <br/>
+	  We're using SSL certificates from CAcert.org. Please install <a href="http://www.cacert.org/index.php?id=3">their SSL Root</a> before signing up.
         </div>
         <%= helpers.clearFloats() %>
       </div>
