link to help and source code

--- a/etherpad/src/templates/about/about_body.ejs
+++ b/etherpad/src/templates/about/about_body.ejs
@@ -4,6 +4,12 @@
 <h1>About / TOS / Privacy Info</h1>
 <br/>
 TitanPad.com Team can be reached at <%= EMAILADDRESSES['support'] %>.<br/>
+Use the online support / discussions: <a href="http://help.titanpad.com/">help.titanpad.com</a>.<br/>
+<br/>
+
+Source Code: <a href="https://github.com/titanpad/titanpad">https://github.com/titanpad/titanpad</a>
+<br/>
+<br/>
 <br/>
 
 TitanPad was launched to provide an EtherPad setup which is unrelated to any commercial and political entities. Its goal is to offer a stable service through proper operating.<br/>
