--- a/etherpad/src/templates/about/impressum_body.ejs
+++ b/etherpad/src/templates/about/impressum_body.ejs
@@ -4,6 +4,7 @@
 <h1>Contact</h1>
 <br/>
 TitanPad.com Team can be reached at <%= EMAILADDRESSES['support'] %>.<br/>
+Use the online support / discussions: <a href="http://help.titanpad.com/">help.titanpad.com</a>.
 <br/>
 <br/>
 <h1>Impressum</h1>
