drop cacert note on frontpage

--- a/etherpad/src/templates/main/home.ejs
+++ b/etherpad/src/templates/main/home.ejs
@@ -66,7 +66,7 @@ limitations under the License. */ %><% helpers.setHtmlTitle("TitanPad"); helpers
 <img src="/static/img/davy/gfx/32/114.png" alt="Filing">
 <strong><a href="/ep/pro-signup/">Get your own private space</a></strong>
 <span>Get a space for your team, on a subdomain<br/>
-Note: requires the <a href="http://www.cacert.org/index.php?id=3">CACert SSL Root</a> to be installed.</span>
+For <b>FREE!</b>
 </li>
 
 </ul>
