add some help texts

--- a/etherpad/src/templates/framed/framedheader.ejs
+++ b/etherpad/src/templates/framed/framedheader.ejs
@@ -15,6 +15,7 @@ limitations under the License. */ %>
 <% function renderTopNav() {
     var links = [
       ['/ep/pro-account/sign-in', 'Sign In', 'signin'],
+      ['/ep/pro-help/', 'Help', 'help'],
       ['http://blog.titanpad.com/', 'Blog', 'blog'],
       ['/', 'Home', 'home'],
     ];
