--- a/etherpad/src/templates/pro-help/main.ejs
+++ b/etherpad/src/templates/pro-help/main.ejs
@@ -1,75 +1,68 @@
 <% helpers.setHtmlTitle("TitanPad Help"); %>
 <h1>TitanPad Help</h1>
 
+<ul>
+<li><a href="/ep/pro-help/#securityprivacy">Security & Privacy</a>
+<li><a href="/ep/pro-help/#limitations">Limitations</a>
+<li><a href="/ep/pro-help/#knownissues">Known Issues</a>
+</ul>
+
 <p>These pages are evolving.  If you have any questions, or find
 parts of TitanPad confusing, please write in to our Helpdesk by
 emailing <%= helpers.oemail("support") %>.</p>
 
 <p>Please report bugs to <%= helpers.oemail("bugs") %>.</p>
 
-<hr>
-
-<ul>
-<li><a href="./#securityprivacy">Security & Privacy</a>
-<li><a href="./#limitations">Limitations</a>
-</ul>
-
-<hr>
-
 <a name="securityprivacy"></a>
-<h1>Security & Privacy</h1>
-<br/>
+<h2>Security & Privacy</h2>
 
-<h2>What security models does TitanPad offer for pads?</h2>
+<h3>What security models does TitanPad offer for pads?</h3>
 
 <p>
 TitanPad offers two different ways to work on Pads.
-<br/>
-Public Pads (e.g. http://titanpad.com/&lt;yourpadname&gt;) are accessible by everyone who has access to the URL. There is no way to password protect these Pads or keep unwanted people out. Only use these Pads for shortlived unsensitive information.
+</p><p>
+Public Pads (e.g. <code>http://titanpad.com/&lt;yourpadname&gt;</code>) are accessible by everyone who has access to the URL. There is no way to password protect these Pads or keep unwanted people out. Only use these Pads for shortlived unsensitive information.
+</p><p>
+Pads in private Subdomains (e.g. <code>http://&lt;yourdomain&gt;.titanpad.com/42</code>) are by default only accessible by users who have an account in the subdomain.
+</p><p>
 
-<br/>
-Pads in private Subdomains (e.g. http://&lt;yourdomain&gt;.titanpad.com/42) are by default only accessible by users who have an account in the subdomain.
-<br/>
-
-You can make these Pads accessible to the public by setting it's Access Level to Public in the Security-menu of the pad. Optionally you can also set a password for the pad, which is then required for _ALL_ users who want to access the Pad, even users of your private domain.
-<br/>
+You can make these Pads accessible to the public by setting it's Access Level to Public in the Security-menu of the pad. Optionally you can also set a password for the pad, which is then required for <em>ALL</em> users who want to access the Pad, even users of your private domain.
 </p>
 
-<h2>
+<h3>
        How can I add people to a Pad in a private subdomain?
-</h2>
+</h3>
 <p>
 You need to send the users the link to the pad in question. Additionally you need to decide on a level of collaboration.
-<br/>
+</p><p>
 
 For one-time collaboration it's usually sufficient to temporarily set the Pad's access level to "Public" and optionally configure a password for the pad.
-<br/>
+</p><p>
 
 For regular collaborators it usually makes more sense to create an account for the user in your private subdomain. Additional users can be created in the Admin menu of your private subdomain. 
-<br/>
 </p>
 
-<h2>
+<h3>
         How can I reset a password of a Pad?
-</h2>
+</h3>
 
 <p>
 Lost passwords for Pads cannot be recovered/reset at the moment. You need to recover the text of the pad via the Recover Pad Text functionality in the Admin Menu and copy-paste the text into a new Pad. Afterwards you can delete the Pad for which you've lost the password.
 <br/>
 </p>
 
-<h2>
+<h3>
         How can I delete an account in a private subdomain?
-</h2>
+</h3>
 
 <p>
 Administrator users can delete acccounts in the Manage Accounts menu found in the Admin area. Please note that you can't delete your own account.
 <br/>
 </p>
 
-<h2>
+<h3>
         How can I delete my private subdomain?
-</h2>
+</h3>
 
 <p>
 If you want to remove your subdomain completely please delete all pads and all other user accounts. Then send us an email at support@titanpad.com stating your domain name and the name of your account and we'll remove your subdomain.
@@ -77,26 +70,41 @@ If you want to remove your subdomain completely please delete all pads and all o
 </p>
 
 <a name="limitations"></a>
-<h1>
+<h2>
     Limitations
-</h1>
+</h2>
 <br/>
 
-<h2>
+<h3>
         How many users can simutaneously edit a pad?
-</h2>
+</h3>
 
 <p>
 Public Pads are limited to 8 simultaneous users. Pads in private subdomains have no hardcoded limits but usability degrades quite harshly after that since coordination of many people editing the same text isn't an easy task.
 <br/>
 </p>
 
-<h2>
+<h3>
         How many users can I have in my private domain?
-</h2>
+</h3>
 
 <p>
 There are no limits on the amount of users which can be created in a private domain.
 <br/>
 </p>
 
+
+<a name="knownissues"></a>
+<h2>
+    Known Issues
+</h2>
+<br/>
+
+<h3>
+        iOS Support
+</h3>
+
+<p>
+TitanPad currently does not work with iOS devices like Apple's iPad or iPhone. A request has been opened on Apple's bug tracker to get support for the necessary HTML features in it's Mobile Safari.
+<br/>
+</p>
