Add Feature Requests section to Help Page

--- a/etherpad/src/templates/pro-help/main.ejs
+++ b/etherpad/src/templates/pro-help/main.ejs
@@ -4,6 +4,7 @@
 <ul>
 <li><a href="/ep/pro-help/#securityprivacy">Security & Privacy</a>
 <li><a href="/ep/pro-help/#limitations">Limitations</a>
+<li><a href="/ep/pro-help/#featurerequests">Feature Requests</a>
 <li><a href="/ep/pro-help/#knownissues">Known Issues</a>
 </ul>
 
@@ -93,6 +94,22 @@ There are no limits on the amount of users which can be created in a private dom
 <br/>
 </p>
 
+<a name="featurerequests"></a>
+<h2>
+    Feature Requests
+</h2>
+<br/>
+
+<h3>
+        It would really great if you could implement feature $x
+</h3>
+
+<p>
+The development on TitanPad is finished for now, we don't plan to add any new features in the near future. We might start cherry-picking features or even merge with <a href="https://github.com/ether/pad">EtherPad upstream</a> if there are interesting features/fixes in there but for now we're satisfied with the state of the site.
+
+If you're interested to look at the source code yourself there's our public <a href="https://github.com/titanpad/titanpad">GitHub repository</a>. There's also quite a few different commercial <a href="http://etherpad.org/public-sites/">EtherPad clones</a> who focus on different use cases, especially Educational Institutions.
+<br/>
+</p>
 
 <a name="knownissues"></a>
 <h2>
