Updated storage policy of pads

--- a/etherpad/src/templates/pro-help/main.ejs
+++ b/etherpad/src/templates/pro-help/main.ejs
@@ -70,6 +70,14 @@ If you want to remove your subdomain completely please delete all pads and all o
 <br/>
 </p>
 
+<h3>
+	How long will you store my pads?
+</h3>
+<p>
+Public pads are kept for 12 months since the last time they've been accessed. Pads in private subdomains are kept for as long as we continue operate this service.
+<br/>
+</p>
+
 <a name="limitations"></a>
 <h2>
     Limitations
