--- a/etherpad/src/templates/html.ejs
+++ b/etherpad/src/templates/html.ejs
@@ -16,6 +16,17 @@ limitations under the License. */ %><!DOCTYPE html PUBLIC
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
   <head>
+
+<script>
+(function(d, s) {
+  var js = d.getElementsByTagName(s)[0],
+      ln = d.createElement(s);
+  BOOMR_lstart=new Date().getTime();
+  ln.src = '//lognormal.net/boomerang/d222d48b467f7a98256e2d3bfdf89a90c736972830cb42eea994c5b5';
+  js.parentNode.insertBefore(ln, js);
+})(document, 'script');
+</script>
+
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Language" content="en-us" />
     <%= helpers.robotsMeta() %>
