--- a/etherpad/src/templates/misc/pad_default.ejs
+++ b/etherpad/src/templates/misc/pad_default.ejs
@@ -1,3 +1,5 @@
 Welcome to TitanPad!
 
-This pad text is synchronized as you type, so that everyone viewing this page sees the same text.  This allows you to collaborate seamlessly on documents!
+This pad text is synchronized as you type, so that everyone viewing this page sees the same text.
+
+Please take yourself time to read http://titanpad.com/ep/pro-help/#deletionpolicy
