--- a/etherpad/src/templates/pro/pro_home.ejs
+++ b/etherpad/src/templates/pro/pro_home.ejs
@@ -60,15 +60,34 @@ limitations under the License. */ %><% helpers.setHtmlTitle(orgName + " - EtherP
 
     <div class="news-time-sep">
       <div class="date">
+        October 15th, 2012
+      </div>
+      <div class="line"><!-- --></div>
+    </div>
+
+    <div class="news-item">
+      <p>Since we provide this service free of charge and had more success than we anticipated
+      we needed to define a deletion policy for unused domains. Starting by August 2012 we will
+      delete all private subdomains which haven't been accessed for more than two years. To prevent
+      your domain from being deleted it suffices to log in every 12-18 months to be on the safe side.</p>
+
+      <p>You can find more information at the TitanPad blog <a href="http://blog.titanpad.com/2012/08/deletion-policy-of-private-pads.html">here</a>
+      and <a href="http://blog.titanpad.com/2012/04/deletion-policy-of-public-pads.html">here</a>.</p>
+
+      <p>You can also help us by deleting pads which you don't need anymore.</p>
+
+    </div>
+
+    <div class="news-time-sep">
+      <div class="date">
         April 10th, 2010
       </div>
       <div class="line"><!-- --></div>
     </div>
 
     <div class="news-item">
-      <p>Welcome to your TitanPad Beta Account!  Please report bugs by
-      sending email to <%= helpers.oemail("support") %>. You can also give us
-      feedback and feature suggestions via the same address.</p>
+      <p>Welcome to your free TitanPad Account!  Please report bugs by
+      sending email to <%= helpers.oemail("support") %>.</p>
 
       <p>If you have any questions, just email <%=
       helpers.oemail("support") %> and
