--- a/etherpad/src/templates/main/support_body.ejs
+++ b/etherpad/src/templates/main/support_body.ejs
@@ -2,5 +2,5 @@
 
 <h2>TitanPad Support</h2>
 
-Please contact <A href="team@titanpad.com">team@titanpad.com</a> for any support issues.<br/>
+Please contact <A href="support@titanpad.com">team@titanpad.com</a> for any support issues.<br/>
 
