Correct false advertising

--- a/etherpad/src/templates/main/home.ejs
+++ b/etherpad/src/templates/main/home.ejs
@@ -52,7 +52,7 @@ limitations under the License. */ %><% helpers.setHtmlTitle("TitanPad"); helpers
 
 <li>
 <img src="/static/img/davy/gfx/32/65.png" alt="Color Wheel">
-<strong>Everyone gets their own color</strong>
+<strong>Eight distinctive author colours to choose from</strong>
 <span>...</span>
 </li>
 
