fix concurrent user docs

--- a/etherpad/src/templates/pro-help/main.ejs
+++ b/etherpad/src/templates/pro-help/main.ejs
@@ -82,7 +82,7 @@ If you want to remove your subdomain completely please delete all pads and all o
 </h3>
 
 <p>
-Public Pads are limited to 8 simultaneous users. Pads in private subdomains have no hardcoded limits but usability degrades quite harshly after that since coordination of many people editing the same text isn't an easy task.
+All Pads have a limit of 64 simultaneous users. Please note that usability degrades quite harshly after more than a dozen users since coordination of many people editing the same text isn't an easy task.
 <br/>
 </p>
 
