move piwik from landing page to footer of all pages

--- a/etherpad/src/templates/html.ejs
+++ b/etherpad/src/templates/html.ejs
@@ -50,5 +50,17 @@ limitations under the License. */ %><!DOCTYPE html PUBLIC
 <%= helpers.jsIncludes() %>
 <%= helpers.googleAnalytics() %>
 
-  </body>
+<!-- Piwik --> 
+<script type="text/javascript">
+var pkBaseURL = (("https:" == document.location.protocol) ? "https://diebold.amd.co.at/" : "http://diebold.amd.co.at/");
+document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script type="text/javascript">
+try {
+var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 8);
+piwikTracker.trackPageView();
+piwikTracker.enableLinkTracking();
+} catch( err ) {}
+</script><noscript><p><img src="http://diebold.amd.co.at/piwik.php?idsite=8" style="border:0" alt="" /></p></noscript>
+<!-- End Piwik Tracking Code --> 
+</body>
 </html>
