ssl blog article

--- a/etherpad/src/templates/pro/pro_home.ejs
+++ b/etherpad/src/templates/pro/pro_home.ejs
@@ -60,6 +60,29 @@ limitations under the License. */ %><% helpers.setHtmlTitle(orgName + " - EtherP
 
     <div class="news-time-sep">
       <div class="date">
+        May 27th, 2014
+      </div>
+      <div class="line"><!-- --></div>
+    </div>
+
+    <div class="news-item">
+      <p>TitanPad is now using&nbsp;<a href="http://en.wikipedia.org/wiki/Transport_Layer_Security" target="_blank">TLS</a>
+      (or SSL, as it was called in the past) for all connections - this means that all communication between you and TitanPad
+      will be <a href="https://www.ssllabs.com/ssltest/analyze.html?d=titanpad.com" target="_blank">encrypted</a>, ensuring that all
+      communication and pad contents can't be seen by adversaries which may have access to your communication lines.
+
+      <p>To make sure that people won't be able to strip the encryption we will enable
+      <a href="http://en.wikipedia.org/wiki/HTTP_Strict_Transport_Security" target="_blank">Strict Transport Security</a>&nbsp;in the next
+      few weeks after we're confident that we don't have any show-stopper bugs anymore.
+
+      <p>It might be necessary for you to restart your browser and/or clear your cache if you encounter problems. If you should
+      run into any other issues with your clients please report the Browser and Operating system on our
+      <a href="http://help.titanpad.com/" target="_blank">support page</a>&nbsp;and we'll try to get it fixed.
+
+    </div>
+
+    <div class="news-time-sep">
+      <div class="date">
         October 15th, 2012
       </div>
       <div class="line"><!-- --></div>
